Ajout du report d'occasion

--- a/views/product_template_views.xml
+++ b/views/product_template_views.xml
@@ -38,6 +38,7 @@
                         <group name="exit" string="Sortie">
                             <group>
                                 <field name="sell_date"/>
+                                <field name="buyer_id"/>
                                 <field name="matriculation_change"/>
                                 <field name="warranty"/>
                             </group>
